openmetadata-spec/src/main/antlr4/org/openmetadata/schema/Fqn.g4
grammar Fqn;

fqn
    : name ('.' name)* EOF
    ;

name
    : NAME               # unquotedName
    | NAME_WITH_RESERVED # quotedName
    ;

NAME
    : NON_RESERVED+
    ;

// A quoted name may contain any character, including the reserved '.' separator
// and the '"' quote itself, which is escaped by doubling it ("").
NAME_WITH_RESERVED
    : QUOTE ( ~["] | '""' )* QUOTE
    ;

QUOTE
    : '"'
    ;

NON_RESERVED
    : ~[".]
    ;

RESERVED
    : '.'
    ;
