openmetadata-ui/src/main/resources/ui/src/antlr/FqnParser.js
// Generated from /Users/amiorin/code/OpenMetadata/catalog-rest-service/src/main/antlr4/org/openmetadata/catalog/Fqn.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import FqnListener from './FqnListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class FqnParser extends antlr4.Parser {

    static grammarFileName = "Fqn.g4";
    static literalNames = [ null, "'.'", null, null, "'\"'" ];
    static symbolicNames = [ null, null, "NAME", "NAME_WITH_RESERVED", "QUOTE", 
                             "NON_RESERVED", "RESERVED" ];
    static ruleNames = [ "fqn", "name" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FqnParser.ruleNames;
        this.literalNames = FqnParser.literalNames;
        this.symbolicNames = FqnParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	fqn() {
	    let localctx = new FqnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FqnParser.RULE_fqn);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 4;
	        this.name();
	        this.state = 9;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===FqnParser.T__0) {
	            this.state = 5;
	            this.match(FqnParser.T__0);
	            this.state = 6;
	            this.name();
	            this.state = 11;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 12;
	        this.match(FqnParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	name() {
	    let localctx = new NameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FqnParser.RULE_name);
	    try {
	        this.state = 16;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case FqnParser.NAME:
	            localctx = new UnquotedNameContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 14;
	            this.match(FqnParser.NAME);
	            break;
	        case FqnParser.NAME_WITH_RESERVED:
	            localctx = new QuotedNameContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 15;
	            this.match(FqnParser.NAME_WITH_RESERVED);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FqnParser.EOF = antlr4.Token.EOF;
FqnParser.T__0 = 1;
FqnParser.NAME = 2;
FqnParser.NAME_WITH_RESERVED = 3;
FqnParser.QUOTE = 4;
FqnParser.NON_RESERVED = 5;
FqnParser.RESERVED = 6;

FqnParser.RULE_fqn = 0;
FqnParser.RULE_name = 1;

class FqnContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FqnParser.RULE_fqn;
    }

	name = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NameContext);
	    } else {
	        return this.getTypedRuleContext(NameContext,i);
	    }
	};

	EOF() {
	    return this.getToken(FqnParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.enterFqn(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.exitFqn(this);
		}
	}


}



class NameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FqnParser.RULE_name;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class QuotedNameContext extends NameContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	NAME_WITH_RESERVED() {
	    return this.getToken(FqnParser.NAME_WITH_RESERVED, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.enterQuotedName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.exitQuotedName(this);
		}
	}


}

FqnParser.QuotedNameContext = QuotedNameContext;

class UnquotedNameContext extends NameContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	NAME() {
	    return this.getToken(FqnParser.NAME, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.enterUnquotedName(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FqnListener ) {
	        listener.exitUnquotedName(this);
		}
	}


}

FqnParser.UnquotedNameContext = UnquotedNameContext;


FqnParser.FqnContext = FqnContext; 
FqnParser.NameContext = NameContext; 
